Attempt to fix laggy sticky th on Firefox Android
Also removed Chrome "fix" for blurry headers that I don't think ever
actually worked.

--- a/assets/results_template/style.scss
+++ b/assets/results_template/style.scss
@@ -223,10 +223,9 @@ table.results-classic {
     padding: 0;
   }
 
-  th {
+  th, thead {
     position: sticky;
     top: 12.5em;
-    zoom: 1.0001; // hack to fix blurry headers on Chrome
   }
 
   tr {
